--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,7 @@ $RECYCLE.BIN/
 .DS_Store
 
 /.vs/config/applicationhost.config
+EPi.Libraries.DeviceDetection.Wurfl/App_Data/wurfl-latest.zip
+EPi.Libraries.DeviceDetection.Wurfl/App_Readme/
+EPi.Libraries.DeviceDetection.Wurfl/COPYING.txt
+EPi.Libraries.DeviceDetection.Wurfl/Introspector/
