Fixed assembly conflict warning caused by Wurfl Cloud API package, which includes NewtonSoft.JSON dll

--- a/EPi.Libraries.DeviceDetection.WurflCloud/EPi.Libraries.DeviceDetection.WurflCloud.csproj
+++ b/EPi.Libraries.DeviceDetection.WurflCloud/EPi.Libraries.DeviceDetection.WurflCloud.csproj
@@ -116,9 +116,9 @@
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Wurfl_Official_Cloud_API.1.2.0.0\lib\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ScientiaMobile.WurflCloud, Version=1.2.0.0, Culture=neutral, PublicKeyToken=816aeec277aa13b9, processorArchitecture=MSIL">
       <HintPath>..\packages\Wurfl_Official_Cloud_API.1.2.0.0\lib\ScientiaMobile.WurflCloud.dll</HintPath>
