--- a/EPi.Libraries.DeviceDetection.FiftyOne/EPi.Libraries.DeviceDetection.FiftyOne.nuspec
+++ b/EPi.Libraries.DeviceDetection.FiftyOne/EPi.Libraries.DeviceDetection.FiftyOne.nuspec
@@ -12,12 +12,12 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
-    <copyright>Copyright © Jeroen Stemerdink 2016</copyright>
+    <copyright>Copyright © Jeroen Stemerdink 2017</copyright>
     <tags>mobile device detection</tags>
     <dependencies>
-      <dependency id="EPiServer.CMS.Core" version="[9.0.3, 10.0)" />
-      <dependency id="EPi.Libraries.DeviceDetection" version="[0.0.1, 2.0.0)" />
-      <dependency id="51Degrees.mobi" version="3.2.7.4" />
+      <dependency id="EPiServer.CMS.Core" version="10.0.0" />
+      <dependency id="EPi.Libraries.DeviceDetection" version="0.0.1" />
+      <dependency id="51Degrees.mobi" version="3.2.9.1" />
     </dependencies>
   </metadata>
   <files>
