--- a/EPi.Libraries.DeviceDetection.WurflCloud/EPi.Libraries.DeviceDetection.WurflCloud.nuspec
+++ b/EPi.Libraries.DeviceDetection.WurflCloud/EPi.Libraries.DeviceDetection.WurflCloud.nuspec
@@ -12,12 +12,12 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
-    <copyright>Copyright © Jeroen Stemerdink 2016</copyright>
+    <copyright>Copyright © Jeroen Stemerdink 2017</copyright>
     <tags>mobile device detection</tags>
     <dependencies>
-      <dependency id="EPiServer.CMS.Core" version="[9.0.3, 10.0)" />
-      <dependency id="EPi.Libraries.DeviceDetection" version="[0.0.1, 2.0.0)" />
-      <dependency id="Wurfl_Official_Cloud_API" version="1.2.0.0" />
+      <dependency id="EPiServer.CMS.Core" version="10.0.0" />
+      <dependency id="EPi.Libraries.DeviceDetection" version="0.0.1" />
+      <dependency id="Wurfl_Official_Cloud_API" version="1.3.0.1" />
     </dependencies>
   </metadata>
   <files>
