--- a/EPi.Libraries.DeviceDetection/EPi.Libraries.DeviceDetection.nuspec
+++ b/EPi.Libraries.DeviceDetection/EPi.Libraries.DeviceDetection.nuspec
@@ -12,10 +12,10 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
-    <copyright>Copyright © Jeroen Stemerdink 2016</copyright>
+    <copyright>Copyright © Jeroen Stemerdink 2017</copyright>
     <tags>mobile device detection</tags>
     <dependencies>
-      <dependency id="EPiServer.CMS.Core" version="[9.7.3, 10.0)" />
+      <dependency id="EPiServer.CMS.Core" version="10.0.0" />
     </dependencies>
   </metadata>
   <files>
