Included some app configs

--- a/EPi.Libraries.DeviceDetection.Wurfl/EPi.Libraries.DeviceDetection.Wurfl.csproj
+++ b/EPi.Libraries.DeviceDetection.Wurfl/EPi.Libraries.DeviceDetection.Wurfl.csproj
@@ -163,6 +163,7 @@
     <Compile Include="WurflAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="EPi.Libraries.DeviceDetection.Wurfl.nuspec" />
     <None Include="EPi.Libraries.DeviceDetection.Wurfl.ruleset" />
     <None Include="EPiServer.Libraries.snk" />
