--- a/EPi.Libraries.DeviceDetection.FiftyOne/EPi.Libraries.DeviceDetection.FiftyOne.csproj
+++ b/EPi.Libraries.DeviceDetection.FiftyOne/EPi.Libraries.DeviceDetection.FiftyOne.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="EPi.Libraries.DeviceDetection.FiftyOne.nuspec" />
     <None Include="EPi.Libraries.DeviceDetection.FiftyOne.ruleset" />
     <None Include="EPiServer.Libraries.snk" />
