--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,6 @@ environment:
   myget_token: 'secure: 9Z+KYPk2hI7hg9kYLv/N13fvoqcYCP96isNUkRrKu0v87cw85H62oe/DCwpqvBXF'
 install:
 - choco install gitversion.portable -pre -y
-#- choco install resharper-clt.portable -y
 - cmd: nuget sources add -Name EPiServerFeed -Source http://nuget.episerver.com/feed/packages.svc/
 before_build:
 - cmd: nuget restore
@@ -15,8 +14,6 @@ build:
   project: EPi.Libraries.DeviceDetection.sln
   verbosity: normal
 after_build:
-#- cmd: dupfinder.exe EPi.Libraries.DeviceDetection.sln
-#- cmd: InspectCode.exe EPi.Libraries.DeviceDetection.sln -x=StyleCop.StyleCop;PowerToys.CyclomaticComplexity
 - cmd: nuget pack EPi.Libraries.DeviceDetection\EPi.Libraries.DeviceDetection.csproj -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
 - cmd: appveyor PushArtifact "EPi.Libraries.DeviceDetection.%GitVersion_NuGetVersion%.nupkg"
 - cmd: nuget pack EPi.Libraries.DeviceDetection.FiftyOne\EPi.Libraries.DeviceDetection.FiftyOne.csproj -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
@@ -57,4 +54,4 @@ deploy:
   artifact: /.*\.zip/
   on:
     branch: master              # release from master branch only
-    appveyor_repo_tag: true     # deploy on tag push only
+    #appveyor_repo_tag: true     # deploy on tag push only
