--- a/EPi.Libraries.DeviceDetection.Wurfl/packages.config
+++ b/EPi.Libraries.DeviceDetection.Wurfl/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" developmentDependency="true" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Desktop.Analyzers" version="1.1.0" targetFramework="net452" />
   <package id="EPiServer.CMS.Core" version="10.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="EPiServer.Framework" version="10.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="ExceptionAnalyzer" version="1.0.5" targetFramework="net452" developmentDependency="true" />
@@ -10,10 +11,27 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.3.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" developmentDependency="true" />
+  <package id="RoslynSecurityGuard" version="2.2.6178.26661" targetFramework="net452" />
   <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net452" developmentDependency="true" />
   <package id="structuremap-signed" version="3.1.6.186" targetFramework="net452" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net452" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection.Metadata" version="1.2.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.Analyzers" version="1.0.1" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.Analyzers" version="1.0.1" targetFramework="net452" />
+  <package id="System.Security.Cryptography.Hashing.Algorithms.Analyzers" version="1.1.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net452" />
   <package id="WURFL_Official_API" version="1.8.3.3" targetFramework="net452" developmentDependency="true" />
 </packages>
